<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/address_dialog_shape1"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_5sdp"
    android:paddingHorizontal="@dimen/_16sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        android:id="@+id/ivClose"
        android:visibility="gone"
        android:src="@drawable/ic_cross"
        android:layout_alignParentEnd="true"/>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/bottomLayout"
    android:layout_below="@+id/ivClose"
    android:scrollbars="none">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/headerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/selectLandmark"
        android:textColor="@color/black2"
        android:textSize="@dimen/_17ssp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/landmarkDesText"
            android:textColor="@color/gray1"
            android:textSize="@dimen/_10ssp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="visible"
            android:background="@drawable/search_bg"
            android:paddingVertical="@dimen/_10sdp"
            android:weightSum="10">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.5"
                android:src="@drawable/ic_search" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtSearch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8.5"
                android:background="@color/transparent"
                android:fontFamily="@font/poppins_light"
                android:hint="@string/searchLandmark"
                android:textColor="@color/text_color"
                android:textColorHint="@color/gray3"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSearchResult"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/transparent"
            android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvLandmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:divider="@null"
        android:dividerHeight="0dp"
        tools:listitem="@layout/landmark_item"
        android:layout_marginBottom="@dimen/_10sdp" />







    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottomLayout"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_11sdp"
            android:background="@drawable/bg_button_disable"
            android:fontFamily="@font/poppins_bold"
            android:paddingVertical="@dimen/_8sdp"
            android:clickable="false"
            android:text="@string/confirm"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />
        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@drawable/skip_btn_shape"
            android:fontFamily="@font/poppins_bold"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/skip_text"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/purple1"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>
</RelativeLayout>

    <!--
    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/rvAddPictures"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" />



    <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_photos"/>
    -->
