<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/mainLayout"
    android:background="@drawable/top_rounded_shape"
    android:paddingHorizontal="@dimen/_16sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/bottomsheet_anchor"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/address"
        android:textColor="@color/black2"
        android:textSize="@dimen/_17ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/black2"
        android:textSize="@dimen/_17ssp"
        android:src="@drawable/ic_cross"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/ctext"
        android:textColor="@color/gray1"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/delivery_address"
        android:textColor="@color/gray1"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.1" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="10"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/rounded_gray_bg"
            android:orientation="horizontal"
            android:padding="@dimen/_5sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/addImage"
                    android:scaleType="centerCrop"
                    android:src="@drawable/photos" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageCount"
                    android:text="@string/digits"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/gray3"
                    android:textSize="@dimen/_8ssp"
                    android:fontFamily="@font/poppins_regular"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_weight="7.2"
                android:layout_marginHorizontal="@dimen/_6sdp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/home"
                    android:drawablePadding="@dimen/_5sdp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/home"
                    android:textColor="@color/black2"
                    android:textSize="@dimen/_9ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvAddressText"
                    android:fontFamily="@font/poppins_regular"
                    android:text=""
                    android:textColor="@color/black2"
                    android:textSize="@dimen/_9ssp" />
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:id="@+id/editAddress"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_weight="0.8"
                android:src="@drawable/ic_edit" />
        </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_16sdp"
        android:background="@drawable/theme_round_btn"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/confirm_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/addNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_round_btn"
        android:fontFamily="@font/poppins_semibold"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_21sdp"
        android:text="@string/add_new_add"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/purple1"
        android:textSize="@dimen/_10ssp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>